Implementar vae, modificar para processar wav bruto, reconstruir audio a partir do resultado do modelo

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/audios/resultados/*
-/data-json/*
-/audios/prepared_datasets/*
-/audios/clean-old
-/audios/dist-old
+/data-json/
+/audios/
+/models/
+/minmax/
+/data/
